src/objects/PowerBI_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Credentials__c</fullName>
        <label>Named Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Id__c</fullName>
        <label>Tenant Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Param__c</fullName>
        <label>URL Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PowerBI Config</label>
    <pluralLabel>PowerBI Configs</pluralLabel>
</CustomObject>